--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "bin": "./bin/index.js",
   "scripts": {
     "start": "node ./bin/index.js",
-    "watch": "nodemon main.js"
+    "watch": "nodemon main.js",
+    "postinstall": "node postinstall.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
